# mini_pytest_proyecto

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build-and-analyze.yml  build.yml
src/myapp/: action.py  calc.py  flow.py  validation.py
tests/: test_e2e_flow.py  test_integration_calc_validation.py  test_unit_action.py  test_unit_calc.py  test_unit_validation.py
