[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "myapp"
version = "0.1.0"
description = "Mini proyecto con m칩dulos de c치lculo, validaci칩n, acci칩n y pruebas con pytest"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
